Added Hexadecimal color changer code.

--- a/setup/styles.css
+++ b/setup/styles.css
@@ -1,4 +1,4 @@
-body {
+body{
     margin:0;
     padding:0;
 }
@@ -40,6 +40,6 @@ h1 {
 }
 
 .color {
-    color: white;
+    color: #ffffff;
     font-size: x-large;
 }
